# INE5454

./: README.md  dataset_completo.json  pyproject.toml
src/: analyze.py  scraper.py  scraper_reddit.py
